--- a/index.html
+++ b/index.html
@@ -1472,6 +1472,15 @@ background:linear-gradient(260.67deg, #ffd342 32.74%, #00c070 68.19%, #1F013C 11
 	</div><!-- end container -->
 </section><!-- end hero_section -->
 	</div><!--End Content-->
+	<section class="how_to_register_5 padding_small" id="how_to_register_5_269"
+	>
+
+	<div class="container">
+					<div class="register_text"><h2>Latest Ozwin Casino Overview</h2>
+To complete the Ozwin casino login Australia process, you must be a registered member. Becoming an Ozwin casino member is easy, and it's free! You can try out our games for free without having to register. You only need to go to the official website, select the game you want to try, and tap 'Try It. You'll be able to enjoy the game in demo mode. However, to play for Australian dollars, you need to log in.
+
+<h2>Log In Ozwin And Win Today</h2>
+<p>To access Ozwin Casino and play for Australian dollars, you must first be a registered user. Registration is straightforward and comes at no cost, allowing you to become a member with ease. Our platform offers the opportunity to test out games without any commitment; simply visit the official site, choose your preferred game, and click on 'Try It' to play in demo mode. This feature lets you experience the games without registration. However, if you wish to play with Australian dollars, logging in is required. </p>
 		<footer class="theme_footer" 
 style="background-color:#0b0a18">
 	<div class="container">
