--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 </style>
 <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' />
 
-	<title>Ozwin Casino - Australian Online Pokies to Play </title>
-	<meta name="description" content="Discover Ozwin Casino 🌟 Your gateway to big wins! 🏆 Enjoy favorite slots, table games, and more 🎲 with exciting bonuses 🌟 and rewards. Play now!" />
+	<title>Ozwin Casino - Top Online Casino Australia ★ Play Pokies & Win</title>
+	<meta name="description" content="Join Ozwin Casino ★ Top online casino in Australia with the best pokies. Enjoy exciting games, a secure environment, and big wins at Ozwin!" />
 	<link rel="canonical" href="https://ozwincasino.gg/" />
 	<meta property="og:locale" content="en_AU" />
 	<meta property="og:type" content="website" />
