--- a/test/index.html
+++ b/test/index.html
@@ -336,7 +336,14 @@
 
 
 
+<div class="wp-block-column is-layout-flow wp-block-column-is-layout-flow" style="flex-basis:33.33%">
 
+    
+
+		      
+
+		</div>
+</div>
 
 
 
