--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1"/>
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ozwin Casino - Top Online Casino Australia ★ Play Pokies & Win</title>
+    <title>Ozwin Casino Australia ❤️ Play Aussie Pokies & Win</title>
     <meta name="description" content="Join Ozwin Casino ★ Top online casino in Australia with the best pokies. Enjoy exciting games, a secure environment, and big wins at Ozwin!">
    <link rel="canonical" href="https://ozwincasino.gg/" />
 
